added request as a dependency in package.json

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "dependencies":{
     "gridfs-stream": "*",
-    "formidable": "*"
+    "formidable": "*",
+    "request": "*"
   },
   "peerDependencies": {
     "soajs": "0.2.*"
