--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "soajs.mongodb.data": "0.1.*",
     "soajs.controller": "0.1.*",
+    "soajs.urac": "0.1.*",
     "grunt": "0.4.5",
     "grunt-contrib-jshint": "0.10.0",
     "grunt-jsdoc": "*",
@@ -31,12 +32,12 @@
     "jshint": "*",
     "lodash": "*",
     "mocha": "*",
-    "shelljs": "*"
+    "shelljs": "*",
+    "request": "*"
   },
   "dependencies":{
     "gridfs-stream": "*",
-    "formidable": "*",
-    "request": "*"
+    "formidable": "*"
   },
   "peerDependencies": {
     "soajs": "0.2.*"
