--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "soajs.gcs",
   "description": "soajs Generic Content Service",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author": {
     "name": "soajs team",
     "email": "team@soajs.org"
@@ -19,16 +19,16 @@
   },
   "devDependencies": {
     "soajs.mongodb.data": "0.1.*",
-    "soajs.controller": "0.1.*",
-    "soajs.urac": "0.1.*",
-    "grunt": "0.4.5",
-    "grunt-contrib-jshint": "0.10.0",
-    "grunt-jsdoc": "*",
-    "grunt-contrib-clean": "*",
-    "grunt-mocha-test": "*",
-    "grunt-env": "*",
-    "grunt-istanbul": "0.3.0",
-    "grunt-coveralls": "*",
+    "soajs.controller": "0.2.*",
+    "soajs.urac": "0.2.*",
+    "grunt":"*",
+    "grunt-contrib-jshint":"*",
+    "grunt-jsdoc" : "*",
+    "grunt-contrib-clean" : "*",
+    "grunt-mocha-test" : "*",
+    "grunt-env" : "*",
+    "grunt-istanbul" : "*",
+    "grunt-coveralls" : "*",
     "jshint": "*",
     "lodash": "*",
     "mocha": "*",
@@ -36,10 +36,8 @@
     "request": "*"
   },
   "dependencies":{
+    "formidable": "*",
     "gridfs-stream": "*",
-    "formidable": "*"
-  },
-  "peerDependencies": {
-    "soajs": "0.2.*"
+    "soajs": "0.3.*"
   }
 }
