--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
   "dependencies":{
     "formidable": "*",
     "gridfs-stream": "*",
-    "soajs": "soajs/soajs.git#develop"
+    "soajs": "git+https://github.com/soajs/soajs.git#develop"
   }
 }
