--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
   "dependencies":{
     "formidable": "1.0.17",
     "gridfs-stream": "1.1.1",
-    "soajs": "0.4.*"
+    "soajs": "git+https://github.com/soajs/soajs.git#feature/sessionLess"
   }
 }
