--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies":{
     "formidable": "1.0.17",
     "gridfs-stream": "1.1.1",
-    "soajs": "git+https://github.com/soajs/soajs.git#feature/sessionLess"
+    "soajs": "git+https://github.com/soajs/soajs.git#feature/sessionLess",
+    "soajs.core.modules": "git+https://github.com/soajs/soajs.core.modules.git#develop"
   }
 }
