--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "mocha": "3.2.0",
     "request": "2.79.0",
     "shelljs": "0.7.5",
-    "soajs.controller": "soajs/soajs.controller.git#develop",
-    "soajs.mongodb.data": "soajs/soajs.mongodb.data.git#develop",
-    "soajs.oauth": "soajs/soajs.oauth.git#develop"
+    "soajs.controller": "1.*",
+    "soajs.mongodb.data": "1.*",
+    "soajs.oauth": "1.*"
   },
   "dependencies":{
     "formidable": "1.0.17",
     "gridfs-stream": "1.1.1",
-    "soajs": "soajs/soajs.git#develop",
-    "soajs.core.modules": "soajs/soajs.core.modules.git#develop"
+    "soajs": "1.*",
+    "soajs.core.modules": "1.*"
   }
 }
