--- a/package.json
+++ b/package.json
@@ -31,14 +31,13 @@
     "mocha": "3.2.0",
     "request": "2.79.0",
     "shelljs": "0.7.5",
-    "soajs.controller": "1.*",
-    "soajs.mongodb.data": "1.*",
-    "soajs.oauth": "1.*"
+    "soajs.controller": "1.0.*",
+    "soajs.mongodb.data": "1.0.*",
+    "soajs.oauth": "1.0.*"
   },
   "dependencies":{
     "formidable": "1.0.17",
     "gridfs-stream": "1.1.1",
-    "soajs": "1.*",
-    "soajs.core.modules": "1.*"
+    "soajs": "1.0.*"
   }
 }
